apps/plex/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: plex
spec:
  ports:
  - protocol: UDP
    port: 32400
    targetPort: 32400
    nodePort: 32400
  selector:
    app: plex
  type: NodePort
