apps/plex/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: plex-ingress
  namespace: plex
spec:
  ingressClassName: nginx
  rules:
  - host: plex.apps.zelesny.com
    http:
      paths:
        - pathType: Prefix
          path: "/"
          backend:
            service:
              name: plex
              port:
                number: 32400
